<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="232dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_backdrop"
        style="@style/PosterDetail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/img_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_backdrop" />

    <TextView
        android:id="@+id/text_title"
        style="@style/Item.TitleDetail"
        android:layout_width="0dp"
        android:layout_marginStart="0.1dp"
        android:layout_marginEnd="0.1dp"
        android:background="@drawable/bg_gradient_trans_white"
        android:paddingStart="10dp"
        android:paddingTop="40dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/img_backdrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_tag"
        style="@style/Item.Vote"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <TextView
        android:id="@+id/text_date_tv"
        style="@style/Item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/date"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_tag" />

    <TextView
        android:id="@+id/text_date"
        style="@style/Item"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/text_date_tv"
        app:layout_constraintTop_toTopOf="@+id/text_date_tv" />

    <TextView
        android:id="@+id/text_voters_detail_tv"
        style="@style/Item"
        android:layout_marginTop="8dp"
        android:text="@string/vote"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_date_tv" />

    <TextView
        android:id="@+id/text_voters_detail"
        style="@style/Item"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/text_voters_detail_tv"
        app:layout_constraintTop_toTopOf="@+id/text_voters_detail_tv" />

    <TextView
        android:id="@+id/text_popularity_detail_tv"
        style="@style/Item"
        android:layout_marginTop="8dp"
        android:text="@string/popularity"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_voters_detail_tv" />


    <TextView
        android:id="@+id/text_popularity_detail"
        style="@style/Item"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/text_popularity_detail_tv"
        app:layout_constraintTop_toTopOf="@+id/text_popularity_detail_tv" />

    <TextView
        android:id="@+id/text_language_detail_tv"
        style="@style/Item"
        android:layout_marginTop="8dp"
        android:text="@string/language"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/text_popularity_detail_tv" />

    <TextView
        android:id="@+id/text_language_detail"
        style="@style/Item"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toEndOf="@+id/text_language_detail_tv"
        app:layout_constraintTop_toTopOf="@+id/text_language_detail_tv" />

    <TextView
        android:id="@+id/txt_description"
        style="@style/Item.Description"
        android:paddingBottom="10dp"
        app:layout_constrainedWidth="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_poster" />

    <ProgressBar
        android:id="@+id/loading_detail"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:progressTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>