<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_movie"
        android:icon="@drawable/ic_movies_white"
        android:title="@string/movie" />
    <item
        android:id="@+id/nav_tv"
        android:icon="@drawable/ic_tvshow_white"
        android:title="@string/tv_show" />
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_favorite_white"
        android:title="@string/favorite" />
</menu>